<resources>
    <string name="app_name">WhisperWaveMixer</string>

    <string name="title_source">Source Audio</string>
    <string name="title_dashboard">Dashboard</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="title_settings">Settings</string>
    <string name="settings_category_about">About</string>
    <string name="settings_about_license_title">Open source license</string>
    <string name="settings_about_license_summary">Apache License, version 2.0</string>
    <string name="settings_about_source_title">View source code</string>
    <string name="settings_about_source_uri">https://github.com/takuron/WhisperWaveMixer/</string>
    <string name="settings_about_privacy_title">Privacy policy</string>
    <string name="settings_about_privacy_summary"> </string>

    <string name="settings_category_player">Player</string>
    <string name="settings_player_foreground_title">Enable foreground service</string>
    <string name="title_activity_dffghndfh">dffghndfhActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="sync_header">Sync</string>
</resources>