<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_category_player">

        <SwitchPreferenceCompat
            app:key="foreground_service"
            app:title="@string/settings_player_foreground_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_category_about">

        <Preference
            app:key="privacy"
            app:summary="@string/settings_about_privacy_summary"
            app:title="@string/settings_about_privacy_title" />

        <Preference
            app:key="license"
            app:summary="@string/settings_about_license_summary"
            app:title="@string/settings_about_license_title" />

        <Preference
            app:key="code"
            app:summary="@string/settings_about_source_uri"
            app:title="@string/settings_about_source_title" />

    </PreferenceCategory>



</PreferenceScreen>